...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/item_list_reunion">


    <ImageView
        android:id="@+id/item_list_round"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lens_black_24dp"
        />


    <TextView
        android:id="@+id/item_list_item"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
...
